# SR-CoD4x

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  ci.bat  ci.sh  compile.bat  compile.sh  compile_linux.sh  compile_windows.sh  install.bat  install.sh  makefile  start.sh
.conan/: linux.conf  windows.conf
.github/workflows/: linux.yml  windows.yml
cmake/: ClangTools.cmake
plugins/: callback_declarations.h  declarations.h  function_declarations.h  pinc.h  plugin_declarations.h
src/: assert.c  bg.h  bg_animation.cpp  bg_jump.cpp  bg_local.h  bg_perks_mp.cpp  bg_public.h  bg_weapons.cpp  bullet.cpp  cl_dedicated.cpp  client_dedicated.h  cm_debug.c  cm_load.c  cm_load_obj.cpp  cm_local.h  cm_public.h  cm_staticmodel_load_obj.cpp  cm_test.c  cm_trace.c  cmd.c  cmd.h  cmd_completion.c  cmd_completion.h  cmodel.c  com_bsp_load_obj.c  com_pack.cpp  com_pack.h  common.c  common_io.c  common_logprint.c  con_channels.cpp  crc.c  crc.h  cscr_animtree.cpp  cscr_animtree.h  cscr_const.cpp  cscr_main.cpp  cscr_main.h  cscr_memorytree.cpp  cscr_memorytree.h  (+166 more)
src/SR/: CMakeLists.txt  CMakePresets.json  README.md  SR.cpp  SR.h  SR.hpp  conanfile.txt  vcpkg-configuration.json  vcpkg.json
src/SR/.vcpkg/: linux.cmake  windows.cmake
src/SR/cmake/: FindMinimp3.cmake
src/SR/commands/: CMakeLists.txt  Command.hpp  Container.cpp  Debug.cpp  Debug.hpp  Demo.cpp  Demo.hpp  Entity.cpp  Game.cpp  Game.hpp  Player.cpp  Player.hpp
src/SR/game/: CMakeLists.txt  Debug.cpp  Debug.hpp  Definitions.hpp  Entity.cpp  Entity.hpp  Map.cpp  Map.hpp  Server.cpp  Server.hpp  Vegas.cpp  Vegas.hpp  Voice.cpp  Voice.hpp
src/SR/game/audio/: Audio.cpp  Audio.hpp  CMakeLists.txt  MP3.cpp  MP3.hpp  Speex.cpp  Speex.hpp  Streamable.cpp  Streamable.hpp  Voice.cpp  Voice.hpp  WAV.cpp  WAV.hpp
src/SR/game/definitions/: CMakeLists.txt  Functions.cpp  Functions.hpp  Macros.hpp  Server.cpp  Server.hpp
src/SR/game/demo/: CMakeLists.txt  Demo.cpp  Demo.hpp  DemoContainer.cpp  DemoContainer.hpp  DemoPlayer.cpp  DemoPlayer.hpp  DemoRecord.cpp  DemoRecord.hpp
src/SR/net/: Netchan.cpp  Netchan.hpp  TCP.hpp
src/SR/player/: PMove.asm  PMove.cpp  PMove.hpp  Player.cpp  Player.hpp
src/SR/speex/: portfile.cmake
src/SR/src/: API.cpp  API.hpp  Application.cpp  Application.hpp  Base.hpp  CMakeLists.txt
src/SR/src/Audio/: Audio.cpp  Audio.hpp  CMakeLists.txt  MP3.cpp  MP3.hpp  Speex.cpp  Speex.hpp  Streamable.cpp  Streamable.hpp  Voice.cpp  Voice.hpp  WAV.cpp  WAV.hpp
src/SR/src/Commands/: CMakeLists.txt  Command.hpp  Container.cpp  Container.hpp  Debug.cpp  Debug.hpp  Demo.cpp  Demo.hpp  Entity.cpp  Entity.hpp  Game.cpp  Game.hpp  Player.cpp  Player.hpp
src/SR/src/Demo/: CMakeLists.txt  Demo.cpp  Demo.hpp  DemoContainer.cpp  DemoContainer.hpp  DemoPlayer.cpp  DemoPlayer.hpp  DemoRecord.cpp  DemoRecord.hpp
src/SR/src/Entity/: CMakeLists.txt  Entity.cpp  Entity.hpp
src/SR/src/Macros/: Base.hpp  CMakeLists.txt
src/SR/src/Network/: CMakeLists.txt  Netchan.cpp  Netchan.hpp  TCP.cpp  TCP.hpp  Vegas.cpp  Vegas.hpp
src/SR/src/Network/Listeners/: CMakeLists.txt  Vegas.cpp  Vegas.hpp
src/SR/src/Player/: CMakeLists.txt  PMove.asm  PMove.cpp  PMove.hpp  Player.cpp  Player.hpp
src/SR/src/Server/: CMakeLists.txt  Debug.cpp  Debug.hpp  Map.cpp  Map.hpp  Server.cpp  Server.hpp
src/SR/src/System/: Async.hpp  AsyncHandler.cpp  AsyncHandler.hpp  CMakeLists.txt  Debug.cpp  Debug.hpp  Environment.cpp  Environment.hpp  ThreadPool.cpp  ThreadPool.hpp
src/SR/src/Utils/: CMakeLists.txt  Log.cpp  Log.hpp  Ref.hpp  Utils.cpp  Utils.hpp
src/SR/sys/: AsyncHandler.cpp  AsyncHandler.hpp  CMakeLists.txt  Environment.cpp  Environment.hpp  ThreadPool.cpp  ThreadPool.hpp
src/SR/utils/: CMakeLists.txt  Log.cpp  Log.hpp  Utils.hpp
src/asmsource/: _db_registry.asm  _g_active_mp.asm  _g_bsp.asm  _g_hudelem.asm  _g_scr_main_mp.asm  pluginexports.asm
src/botlib/: aasfile.h  be_aas_bsp.h  be_aas_bspq3.c  be_aas_cluster.c  be_aas_cluster.h  be_aas_debug.c  be_aas_debug.h  be_aas_def.h  be_aas_entity.c  be_aas_entity.h  be_aas_file.c  be_aas_file.h  be_aas_funcs.h  be_aas_main.c  be_aas_main.h  be_aas_move.c  be_aas_move.h  be_aas_optimize.c  be_aas_optimize.h  be_aas_reach.c  be_aas_reach.h  be_aas_route.c  be_aas_route.h  be_aas_routealt.c  be_aas_routealt.h  be_aas_routetable.c  be_aas_routetable.h  be_aas_sample.c  be_aas_sample.h  be_ai_char.c  be_ai_chat.c  be_ai_gen.c  be_ai_goal.c  be_ai_move.c  be_ai_weap.c  be_ai_weight.c  be_ai_weight.h  be_ea.c  be_interface.c  be_interface.h  (+16 more)
src/bspc/: _files.c  aas_areamerging.c  aas_areamerging.h  aas_cfg.c  aas_cfg.h  aas_create.c  aas_create.h  aas_edgemelting.c  aas_edgemelting.h  aas_facemerging.c  aas_facemerging.h  aas_file.c  aas_file.h  aas_gsubdiv.c  aas_gsubdiv.h  aas_map.c  aas_map.h  aas_prunenodes.c  aas_prunenodes.h  aas_public.h  aas_store.c  aas_store.h  be_aas_bspc.c  be_aas_bspc.h  brushbsp.c  bspc.c  cm_patch.c  cm_patch.h  csg.c  db_load.h  db_miniload.cpp  db_miniregistry.cpp  faces.c  glfile.c  l_assert.c  l_bsp_ent.c  l_bsp_ent.h  l_bsp_iw3.c  l_bsp_iw3.h  l_bsp_q1.c  (+41 more)
src/game/: be_aas.h  be_ai_char.h  be_ai_chat.h  be_ai_gen.h  be_ai_goal.h  be_ai_move.h  be_ai_weap.h  be_ea.h  botlib.h  def.h  surfaceflags.h
src/mbedtls/: aes.c  aes.h  aesni.c  aesni.h  arc4.c  arc4.h  aria.c  aria.h  asn1.h  asn1parse.c  asn1write.c  asn1write.h  base64.c  base64.h  bignum.c  bignum.h  blowfish.c  blowfish.h  bn_mul.h  camellia.c  camellia.h  ccm.c  ccm.h  certs.c  certs.h  chacha20.c  chacha20.h  chachapoly.c  chachapoly.h  check_config.h  cipher.c  cipher.h  cipher_internal.h  cipher_wrap.c  cmac.c  cmac.h  compat-1.3.h  config.h  ctr_drbg.c  ctr_drbg.h  (+117 more)
src/sr/: CMakeLists.txt  CMakePresets.json  (+2 more)
(+320 files in other folders)
